fix: remove text on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ a {
   align-items: end;
   position: absolute;
   z-index: 10;
-  transform: translate(-100%, -20%);
+  transform: translate(-110%, -20%);
 }
 
 .text-container {
